# Inference-Dashboard

./: .env.example  .gitignore  CLAUDE.md  README.md  about.html  architecture.html  index.html  launch.command  layer.html  pyproject.toml  refresh.command  signals.html  stock.html  stocks.html  tw-movers.html  us-movers.html
.github/workflows/: refresh.yml
assets/: app.js  components.js  styles.css
content/layers/: 01-hbm.md  02-foundry.md  03-packaging.md  04-wfe.md  05-gpu.md  06-networking.md  07-optics.md  08-switches.md  09-power.md  10-cooling.md  11-hyperscalers.md  12-neoclouds.md  13-software.md  14-eda.md  15-substrates.md
data/: bottleneck.json  ciq_mapping.json  cross_quarter.json  demand_signals.json  exit_triggers.json  exit_triggers_manual.json  filing_summaries.json  fundamentals.json  layers.json  manual_estimates_template.csv  meta.json  multiples_history.json  narrative_tracking.json  players.json  prices.json  scores.json  signals.json  transcripts_index.json  tw_movers.json  us_industry.json  us_movers.json  value_chains.json
data/transcripts/: AMAT-22940.json  AMAT-32611.json  AMAT-33064.json  AMD-28060.json  (+106 more)
docs/: claude_routine_prompt.md
jobs/: backfill_cross_quarter.py  bottleneck.py  check_edgar_new_filings.py  com.inference-dashboard.refresh.plist.example  cross_quarter_auto.py  edgar_discovery.py  exit_triggers.py  fetch_new_filings.py  filing_summarizer.py  find_new_filings.py  gen_cross_quarter.py  narrative.py  query_edgar.py  refresh.py  scoring.py  seed.py  transform.py  write_cross_quarter.py  write_summaries.py
(+9 files in other folders)
